--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,10 @@ header nav ul li {
     margin-left: 25px;
 }
 
+header nav ul li a:hover {
+    color: lightgrey;
+}
+
 a {
     color: #ffffff;
     text-decoration: none;
@@ -56,7 +60,10 @@ p {
 .coverPhoto {
     width: 100%;
     height: 800px;
+    margin-top: 40px;
     margin-bottom: 25px;
+    object-fit: cover;
+    overflow: hidden;
 }
 
 .float-left {
@@ -73,6 +80,24 @@ main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+}
+
+main section {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+main section img {
+    max-height: 200px;
+}
+
+main section h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 aside {
@@ -100,24 +125,6 @@ aside section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-main section {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-main section img {
-    max-height: 200px;
-}
-
-main section h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 footer {
